# jambul

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
plugins/: Makefile.am  plugins.mk
plugins/core/: Makefile.am  core.plugin  core.vala
src/: main.vala  plugins.vala
vapi/: jambul.deps
